# weather-api-test-app

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  TEST.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py
app/config/: settings.py  utils.py
app/models/: events.py  weather.py
app/providers/database/: __init__.py  base.py  dynamodb.py  factory.py  local_db.py
app/providers/storage/: __init__.py  base.py  factory.py  local_file.py  s3.py
app/services/: cache_service.py  weather_client.py  weather_service.py
app/utils/: exceptions.py
tests/: test_api.py  test_cache_service.py  test_weather_client.py  test_weather_service.py
